# sonora

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Cargo.toml  Dockerfile  Taskfile.yml  config.prod.yaml  config.yaml  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  router.go
.cargo/: config.toml
.claude/commands/: recap.md
.github/prompts/: cli-dev.prompt.md  client-dev.prompt.md  server-dev.prompt.md
.github/workflows/: docker-image.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-21-vfs-admin-panel/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-07/06-29-vfs-admin-panel/: design.md  implement.md  prd.md  task.json
.trellis/workspace/eric-wang/: index.md  journal-1.md
apps/web/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/client/src/: index.css  main.tsx  styles.css
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs
apps/web/server/src/handlers/: node.rs
apps/web/server/src/service/: mod.rs  node.rs
apps/web/server/src/tests/: mod.rs  node.rs
apps/web/server/src/tests/cases/: node.md
cli/: app.py  audio_metadata.py  config.py  requirements.txt  upload.py
client/: admin.html  index.html  package-lock.json  package.json  tsconfig.node.json  vite.admin.config.ts  vite.config.ts
client/src/: AdminBoard.tsx  App.tsx  admin.tsx  index.css  main.tsx
client/src/components/admin/: MiniPlayer.tsx  album.tsx  singer.tsx  track.tsx
client/src/components/player/: AlbumDetail.tsx  AlbumGrid.tsx  FullPlayer.tsx  Layout.tsx  MiniPlayer.tsx  PlaybackControls.tsx  ProgressBar.tsx  Queue.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  SingerDetail.tsx  SingerList.tsx  SongList.tsx  icons.tsx
client/src/hooks/: use-albums.ts  use-miniplayer.ts  use-tracks.ts
client/src/hooks/admin/: use-singers.ts  use-tracks.ts
client/src/hooks/player/: use-albums.ts  use-keyboard-shortcuts.ts  use-singers.ts  use-tracks.ts
client/src/lib/: AudioContext.tsx  fileUpload.ts  localCache.ts  queryClient.ts  utils.ts
compose/: docker-compose.yaml  frps.toml
config/: config.go  db.go
crates/application/: Cargo.toml
crates/application/src/: lib.rs  node.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: frontend.rs  lib.rs  node.rs
crates/db/: Cargo.toml
crates/db/src/: bootstrap.rs  error.rs  lib.rs  location.rs  tests.rs  time.rs
crates/db/src/migration/: catalog.rs  mod.rs  runner.rs  runner_tests.rs  schema_v0001.rs  schema_v0002.rs
crates/db/src/node/: mod.rs  repository.rs  repository_tests.rs
crates/db/testcases/: node.md
crates/domain/: Cargo.toml
crates/domain/src/: ids.rs  lib.rs  node.rs
crates/logging/: Cargo.toml
crates/logging/src/: clock.rs  config.rs  formatter.rs  lib.rs  macros.rs  test_support.rs  tests.rs
docs/: api.md  roadmap.md
docs/cli/: sonora-cli.md
docs/client/: client.md  dev-log.md  todo.md
docs/server/: dev-log.md  server.md  test.md  todo.md
handler/: handler.go
handler/album/: CreateAlbum.go  DeleteAlbum.go  GetAlbum.go  ListAlbums.go  ListAllAlbums.go  SearchAlbum.go  UpdateAlbum.go  base.go
handler/auth/: Auth.go  base.go
handler/media/: DeleteMedia.go  media.go  serve.go  upload.go
handler/singer/: CreateSinger.go  DeleteSinger.go  GetSinger.go  ListAllSingers.go  ListSingers.go  SearchSinger.go  UpdateSinger.go  base.go
handler/sync/: GetFullSync.go  GetUpdates.go  base.go
handler/track/: CreateLyric.go  CreateTrack.go  DeleteTrack.go  GetLyric.go  GetTrack.go  ListAlbumTracks.go  ListSingles.go  ListTracks.go  SearchTrack.go  UpdateLyric.go  UpdateTrack.go  base.go
handler/user/: GetUserInfo.go  base.go
log/: logger.go
middleware/: bodywriter.go  idempotency.go  jwt.go  logging.go
migration/: helpers.go  migration.go  migrations.go
model/: album.go  changelog.go  lyric.go  media.go  model.go  singer.go  track.go  user.go
openspec/: config.yaml
service/: crypt.go  storage.go  worker.go
tests/: tests.go
tests/api/: album.go  media.go  sync.go  track.go
tests/integration/album/: DeleteAlbum_test.go
tests/integration/sync/: FullSync_test.go  IncrementalSync_test.go
tests/integration/track/: DeleteTrack_test.go
xtask/: Cargo.toml
xtask/src/: export_contracts.rs  main.rs
