[workspace]
members = [
    "apps/web/server",
    "crates/application",
    "crates/contracts",
    "crates/db",
    "crates/domain",
    "crates/logging",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
# Internal
sonora-application = { path = "crates/application" }
sonora-contracts = { path = "crates/contracts" }
sonora-db = { path = "crates/db" }
sonora-domain = { path = "crates/domain" }
sonora-logging = { path = "crates/logging" }

# External
axum = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
dotenvy = "0.15"
pretty_assertions = "1"
ts-rs = { version = "12.0", features = ["format"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower = "0.5"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "time", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"
