[package]
name = "sonora-application"
version.workspace = true
edition.workspace = true

[lib]
name = "sonora_application"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
sonora-contracts = { workspace = true }
sonora-db = { workspace = true }
sonora-domain = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
