[package]
name = "sonora-db"
version.workspace = true
edition.workspace = true

[lib]
name = "sonora_db"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
sonora-domain = { workspace = true, features = ["sqlx"] }
sonora-logging = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
